--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Compiled class file
 *.class
+target/
+
 
 # Log file
 *.log
+logs/
 
 # BlueJ files
 *.ctxt
@@ -18,6 +21,10 @@
 *.zip
 *.tar.gz
 *.rar
+
+#idea
+.idea
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
