--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,6 @@ fdfs:
     width: 150
     height: 150
   tracker-list:
-    - 192.168.1.254:22122
-  web-server-url: http://192.168.1.254:8888/
+    - upload.jxsliot.cn:22122
+  web-server-url: http://upload.jxsliot.cn/
 
